Bug #191: Top pane "menubar-links-wrapper" get misaligned when an error occurs

--- a/public/rsrcs/css/social.css
+++ b/public/rsrcs/css/social.css
@@ -221,6 +221,11 @@ a:hover, a:active, a:focus {
     width: 350px;
     font-size:12px;
 }
+/* Sometimes error pages are getting rendered in quirks mode.
+   In quirks more browsers add 1em margin-bottom to the forms */
+#search {
+    margin-bottom: 0 !important;
+}
 
 
 /*
